--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Projeto 1</title>
 </head>
 <body>
-	<h1>Eu adoro o GitHub</h1>
+	<center>
+		<h1 style="color:pink">Eu adoro o GitHub</h1>
+	</center>
 </body>
 </html>
