--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
 	<h1>Eu adoro o GitHub</h1>
+	<ul>
+		<li><a href="home.html">Home</a></li>
+		<li><a href="sobre.html">Sobre</a></li>
+		<li><a href="contato.html">Contato</a></li>
+	</ul>
 </body>
 </html>
