--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>Projeto 1</title>
 </head>
 <body>
+	<h1>Projeto 1</h1>
 	<center>
-		<h1 style="color:pink">Eu adoro o GitHub</h1>
+		<h1 style="color:blue">Eu adoro o GitHub</h1>
 	</center>
 </body>
 </html>
